generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

model Language {
  code      String @id @db.VarChar(10)
  name      String @db.VarChar(100)
  direction String @default("LTR") @db.VarChar(10)

  categoryTranslations    CategoryTranslation[]
  foodTranslations        FoodTranslation[]
  foodVariantTranslations FoodVariantTranslation[]

  @@map("language")
}

model Category {
  id          String  @id @db.VarChar(255)
  key         String  @unique @db.VarChar(255)
  isAvailable Boolean @default(true) @map("is_available")

  translations CategoryTranslation[]
  foods        Food[]

  @@map("category")
  @@index([key])
}

model CategoryTranslation {
  categoryId  String  @map("category_id") @db.VarChar(255)
  language    String  @db.VarChar(10)
  name        String  @db.VarChar(255)
  description String? @db.Text

  category Category @relation(fields: [categoryId], references: [id], onDelete: Cascade)
  lang     Language @relation(fields: [language], references: [code], onDelete: Cascade)

  @@id([categoryId, language])
  @@map("category_translation")
}

model Food {
  id              String  @id @db.VarChar(255)
  imageUrl        String? @map("image_url") @db.VarChar(500)
  categoryId      String  @map("category_id") @db.VarChar(255)
  isAvailable     Boolean @default(true) @map("is_available")
  shouldCalculate Boolean @default(true) @map("should_calculate")
  isRecommended   Boolean @default(false) @map("is_recommended")

  category     Category          @relation(fields: [categoryId], references: [id])
  variants     FoodVariant[]
  translations FoodTranslation[]

  @@map("food")
  @@index([categoryId, isAvailable])
}

model FoodTranslation {
  foodId      String  @map("food_id") @db.VarChar(255)
  language    String  @db.VarChar(10)
  name        String  @db.VarChar(255)
  description String? @db.Text

  food Food     @relation(fields: [foodId], references: [id], onDelete: Cascade)
  lang Language @relation(fields: [language], references: [code], onDelete: Cascade)

  @@id([foodId, language])
  @@map("food_translation")
}

model FoodVariant {
  id          String   @id @db.VarChar(255)
  foodId      String   @map("food_id") @db.VarChar(255)
  price       Decimal? @db.Decimal(10, 2)
  currency    String   @default("RM") @db.VarChar(10)
  isSeasonal  Boolean  @default(false) @map("is_seasonal")
  isAvailable Boolean  @default(false) @map("is_available")

  food         Food                    @relation(fields: [foodId], references: [id], onDelete: Cascade)
  orders       Order[]
  presetFoods  PresetMenuFood[]
  translations FoodVariantTranslation[]

  @@map("food_variant")
  @@index([foodId])
}

model FoodVariantTranslation {
  variantId String @map("variant_id") @db.VarChar(255)
  language  String @db.VarChar(10)
  label     String @db.VarChar(255)

  variant FoodVariant @relation(fields: [variantId], references: [id], onDelete: Cascade)
  lang    Language    @relation(fields: [language], references: [code], onDelete: Cascade)

  @@id([variantId, language])
  @@map("food_variant_translation")
}

model Event {
  id           String   @id @db.VarChar(255)
  pin          String   @db.VarChar(10)
  name         String?  @db.VarChar(255)
  isActive     Boolean  @default(false) @map("is_active")
  presetMenuId String?  @map("preset_menu_id") @db.VarChar(255)
  createdAt    DateTime @default(now()) @map("created_at")

  presetMenu PresetMenu? @relation(fields: [presetMenuId], references: [id])
  tables     Table[]
  people     People[]
  orders     Order[]
  feedbacks  Feedback[]

  @@map("event")
  @@index([isActive])
}

/// A physical spot in the restaurant. Permanent across events: its number and
/// floor-plan position are arranged once and reused every night.
model TableSlot {
  id              String  @id @db.VarChar(255)
  no              Int     @unique
  name            String  @db.VarChar(255)
  x               Float?
  y               Float?
  defaultCapacity Int     @default(1) @map("default_capacity")
  isActive        Boolean @default(true) @map("is_active")

  tables Table[]

  @@map("table_slot")
  @@index([no])
}

/// One event's seating at a slot. Disposable: people, orders and the host live
/// here, while the number/position/name come from the slot.
model Table {
  id            String  @id @db.VarChar(255)
  slotId        String? @map("slot_id") @db.VarChar(255)
  capacity      Int     @default(1)
  tableLeaderId String? @unique @map("table_leader_id") @db.VarChar(255)
  isStaging     Boolean @default(false) @map("is_staging")
  eventId       String? @map("event_id") @db.VarChar(255)

  slot   TableSlot? @relation(fields: [slotId], references: [id], onDelete: SetNull)
  event  Event?     @relation(fields: [eventId], references: [id], onDelete: Cascade)
  people People[]
  orders Order[]

  @@unique([slotId, eventId])
  @@map("table")
  @@index([eventId])
  @@index([slotId])
}

model People {
  id      String  @id @db.VarChar(255)
  name    String  @db.VarChar(255)
  tableId String? @map("table_id") @db.VarChar(255)
  eventId String? @map("event_id") @db.VarChar(255)

  table         Table?         @relation(fields: [tableId], references: [id], onDelete: Cascade)
  event         Event?         @relation(fields: [eventId], references: [id], onDelete: Cascade)
  personalNotes PersonalNote[]
  orderSplits   OrderSplit[]

  @@map("people")
  @@index([tableId])
  @@index([eventId])
}

model PersonalNote {
  id       String @id @db.VarChar(255)
  personId String @map("person_id") @db.VarChar(255)
  content  String @db.Text

  person People @relation(fields: [personId], references: [id], onDelete: Cascade)

  @@map("personal_note")
  @@index([personId])
}

model Order {
  id        String   @id @db.VarChar(255)
  tableId   String   @map("table_id") @db.VarChar(255)
  variantId String   @map("variant_id") @db.VarChar(255)
  eventId   String?  @map("event_id") @db.VarChar(255)
  quantity  Int      @default(1)
  price     Decimal  @db.Decimal(10, 2)
  splitAll  Boolean  @default(true) @map("split_all")
  updatedAt DateTime @updatedAt @map("updated_at")
  createdAt DateTime @default(now()) @map("created_at")

  table   Table        @relation(fields: [tableId], references: [id], onDelete: Cascade)
  variant FoodVariant  @relation(fields: [variantId], references: [id], onDelete: Cascade)
  event   Event?       @relation(fields: [eventId], references: [id], onDelete: Cascade)
  splits  OrderSplit[]

  @@map("order")
  @@index([tableId, createdAt])
  @@index([createdAt])
  @@index([eventId])
}

model OrderSplit {
  orderId  String @map("order_id") @db.VarChar(255)
  personId String @map("person_id") @db.VarChar(255)

  order  Order  @relation(fields: [orderId], references: [id], onDelete: Cascade)
  person People @relation(fields: [personId], references: [id], onDelete: Cascade)

  @@id([orderId, personId])
  @@map("order_split")
  @@index([personId])
}

model Feedback {
  id        String   @id @db.VarChar(255)
  by        String?  @map("by") @db.VarChar(255)
  content   String?  @db.Text
  eventId   String?  @map("event_id") @db.VarChar(255)
  updatedAt DateTime @updatedAt @map("updated_at")
  createdAt DateTime @default(now()) @map("created_at")

  event     Event?             @relation(fields: [eventId], references: [id], onDelete: Cascade)
  reactions FeedbackReaction[]

  @@map("feedback")
  @@index([createdAt])
  @@index([eventId])
}

model FeedbackReaction {
  feedbackId String @map("feedback_id") @db.VarChar(255)
  emoji      String @db.VarChar(16)
  count      Int    @default(0)

  feedback Feedback @relation(fields: [feedbackId], references: [id], onDelete: Cascade)

  @@id([feedbackId, emoji])
  @@map("feedback_reaction")
}

model PresetMenu {
  id       String  @id @db.VarChar(255)
  price    Decimal @db.Decimal(10, 2)
  isActive Boolean @default(true) @map("is_active")

  foods  PresetMenuFood[]
  events Event[]

  @@map("preset_menu")
}

model PresetMenuFood {
  presetId  String @map("preset_id") @db.VarChar(255)
  variantId String @map("variant_id") @db.VarChar(255)
  quantity  Int    @default(1)

  preset  PresetMenu  @relation(fields: [presetId], references: [id])
  variant FoodVariant @relation(fields: [variantId], references: [id])

  @@id([presetId, variantId])
  @@map("preset_menu_food")
  @@index([variantId])
}

model AppConfig {
  key       String   @id @db.VarChar(255)
  value     String   @db.Text
  type      String   @default("string") @db.VarChar(20)
  category  String?  @db.VarChar(100)
  label     String?  @db.VarChar(255)
  isPublic  Boolean  @default(false) @map("is_public")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@map("app_config")
  @@index([category])
}
